Minor health updates as per Java 11